[package]
name = "mnemo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Official Rust SDK for the Mnemo API"
license = "MIT"
repository = "https://github.com/getmnemo/getmnemo-rust"
homepage = "https://getmnemo.xyz"
readme = "README.md"
keywords = ["getmnemo", "memory", "ai", "agents", "sdk"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
